<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/color_gray_light"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/asset_coin_time"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_11"/>

        <TextView
            android:id="@+id/tv_fee"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/asset_fee"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_11"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="16dp"
            android:text="@string/asset_count_state"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_11"/>

    </LinearLayout>

    <include layout="@layout/layout_list"/>

</LinearLayout>