<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_shape_white_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_my_assets_close"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/asset_coin"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/asset_address"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/asset_count"
            android:textColor="@color/color_gray_dark1"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_14"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/common_selector_blue_blue_radius3"
            android:text="@string/asset_commit"
            android:textColor="@color/color_white2"
            android:textSize="@dimen/font_size_17"/>
    </LinearLayout>

</LinearLayout>