<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_light"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/color_white">

        <TextView
            android:id="@+id/tv_coin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="btc"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_15"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/color_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asset_type"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asset_count"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fee"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asset_fee"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_fee"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asset_status"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_confirmation_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_submit_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asset_submit_time"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_submit_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="3dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asset_finish_time"
                android:textColor="@color/gray_text_line"
                android:textSize="@dimen/font_size_14"/>

            <TextView
                android:id="@+id/tv_finish_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/asset_address"
        android:textColor="@color/gray_text_line"
        android:textSize="@dimen/font_size_14"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:padding="15dp"
        android:textColor="@color/color_gray_dark2"
        android:textSize="@dimen/font_size_14"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/color_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_txid_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/asset_txid"
            android:textColor="@color/gray_text_line"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:id="@+id/tv_txid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_txid_title"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_14"/>

        <Button
            android:id="@+id/btn_copy_txid"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_txid"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/asset_btn_copy_txid_bg"
            android:text="@string/asset_copy_txid"
            android:textColor="@color/color_gray_dark2"/>

    </RelativeLayout>
</LinearLayout>
