<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_shape_gray_radius3"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv_short_name"
                style="@style/common_clear_able_edit_text_style"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@color/color_transparent"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:textSize="@dimen/font_size_15"
                tools:text="BTC" />

            <TextView
                android:id="@+id/tv_fullname"
                style="@style/common_clear_able_edit_text_style"
                android:layout_height="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@color/color_transparent"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_14"
                tools:text="(bitcoin)" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_current_available"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/tv_current_available"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"
                tools:text="100.45678285" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_current_frozen"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/tv_current_frozen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_14"
                tools:text="50" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="1dp"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <com.wanshare.common.widget.text.ClearAbleEditText
                android:id="@+id/et_address"
                style="@style/common_clear_able_edit_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:hint="@string/asset_input_address"
                android:paddingLeft="0dp"
                app:textPaddingLeft="0dp"
                app:underline_visible="false" />

            <ImageView
                android:id="@+id/iv_wallet_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/assets_address_selector" />

            <ImageView
                android:id="@+id/iv_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/assets_scan_selector" />
        </LinearLayout>

        <com.wanshare.common.widget.text.ClearAbleEditText
            android:id="@+id/et_mark"
            style="@style/common_clear_able_edit_text_style"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:hint="@string/asset_remark"
            android:paddingLeft="0dp"
            android:visibility="gone"
            app:underline_visible="false"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/color_gray_light"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_is_remember_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/asset_save_new_address"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_14"
                android:layout_gravity="center_vertical"
                android:button="@drawable/asset_selector_checkbox"
                android:paddingLeft="10dp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/tv_amount_error_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_cuemark"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:textColor="@color/color_red_light"
                android:textSize="@dimen/font_size_12"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="16dp">

                <com.wanshare.common.widget.text.ClearAbleEditText
                    android:id="@+id/et_withdraw_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:hint="@string/asset_min_withdraw_amount"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/color_gray_dark1"
                    app:underline_visible="false" />

                <TextView
                    android:id="@+id/tv_withdraw_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/asset_withdraw_all"
                    android:textColor="@color/color_red_light"
                    android:textSize="@dimen/font_size_14" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gray_light"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_withdraw_balance_of_day"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:id="@+id/tv_daily_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_12" />


            <TextView
                android:id="@+id/tv_daily_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:id="@+id/tv_daily_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textColor="@color/color_gray_dark1"
                android:textSize="@dimen/font_size_12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginBottom="1dp"
            android:background="@color/color_white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                style="@style/asset_tv_withdraw_left_style"
                android:text="@string/asset_charge" />

            <TextView
                android:id="@+id/tv_fee_ratio"
                style="@style/asset_tv_withdraw_right_style" />

            <TextView
                android:id="@+id/tv_fee_currency"
                style="@style/asset_tv_withdraw_right_style"
                android:layout_marginLeft="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/color_white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                style="@style/asset_tv_withdraw_left_style"
                android:text="@string/asset_actual_to_account" />

            <TextView
                android:id="@+id/tv_arrival"
                style="@style/asset_tv_withdraw_right_style" />

            <TextView
                android:id="@+id/tv_arrival_currency"
                style="@style/asset_tv_withdraw_right_style"
                android:layout_marginLeft="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gray_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="15dp"
                android:text="@string/asset_withdraw_explain"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/tv_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                tools:text="@string/asset_withdraw_explain_body"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>